--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -83,6 +83,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_ip">IP address</string>
     <string name="settings_phone">Phone number</string>
     <string name="settings_id">Android ID</string>
+    <string name="settings_adid">Advertisement ID</string>
     <string name="settings_country">Country</string>
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Subscriber ID</string>
