--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -83,6 +83,7 @@
     <string name="settings_ip">IP address</string>
     <string name="settings_phone">Αριθμός τηλεφώνου</string>
     <string name="settings_id">Αναγνωριστικό android</string>
+    <string name="settings_adid">Advertisement ID</string>
     <string name="settings_country">Χώρα</string>
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Αναγνωριστικό συνδρομητή</string>
