--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -85,6 +85,7 @@
     <string name="settings_ip">آدرس آی پی</string>
     <string name="settings_phone">شماره تلفن</string>
     <string name="settings_id">شناسه اندروید</string>
+    <string name="settings_adid">Advertisement ID</string>
     <string name="settings_country">کشور</string>
     <string name="settings_operator">اپراتور</string>
     <string name="settings_subscriber">شناسه مشترک</string>
