--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -83,6 +83,7 @@
     <string name="settings_ip">IP アドレス</string>
     <string name="settings_phone">電話番号</string>
     <string name="settings_id">Android ID</string>
+    <string name="settings_adid">Advertisement ID</string>
     <string name="settings_country">国</string>
     <string name="settings_operator">キャリア</string>
     <string name="settings_subscriber">契約者固有ID</string>
