--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -83,6 +83,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_ip">IP address</string>
     <string name="settings_phone">Број телефона</string>
     <string name="settings_id">ИД Андроида</string>
+    <string name="settings_adid">Advertisement ID</string>
     <string name="settings_country">Земља</string>
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Претплатнички ИД</string>
