Added setting to disable update notification (per application)
Fixes #635

--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -86,6 +86,7 @@
     <string name="settings_operator">Operatør</string>
     <string name="settings_subscriber">Abonnent-ID</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug-log (kræver genstart)</string>
     <string name="help_application">App</string>
