--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -86,6 +86,7 @@
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Abonnent ID</string>
     <string name="settings_ua">Brukeragent</string>
+    <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Feilsøkingsloggfil (omstart nødvendig)</string>
     <string name="help_application">Applikasjon</string>
