--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -88,6 +88,7 @@
     <string name="settings_operator">المُشغل</string>
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_ua">وكيل المستخدم</string>
+    <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log"> سِجِل تصحيح الأخطاء (يتطلب إعادة التشغيل) </string>
     <string name="help_application">التطبيق</string>
