--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -88,6 +88,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_operator">Opérateur</string>
     <string name="settings_subscriber">ID Abonné</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (redémarrage nécessaire)</string>
     <string name="help_application">Application</string>
