--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -88,6 +88,7 @@
     <string name="settings_operator">ऑपरेटर</string>
     <string name="settings_subscriber">ग्राहक क्रमांक</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (पुनरारंभ जरूरी)</string>
     <string name="help_application">Application</string>
