--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -89,6 +89,7 @@
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (wymaga restartu)</string>
     <string name="help_application">Aplikacja</string>
