--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -6,33 +6,35 @@
     <string name="app_version" formatted="false">XPrivacy versija: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed sistemos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    
     <string name="menu_usage">Leidimų naudojimas</string>
     <string name="menu_refresh">Atnaujinti</string>
-    <string name="menu_settings">XPrivacy parametrai</string>
+    <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Šablonai</string>
     <string name="menu_report">Pranešti apie problemą</string>
     <string name="menu_export">Exportuoti parametrus</string>
     <string name="menu_import">Importuoti parametrus</string>
     <string name="menu_submit">Pateikti leidimus</string>
-    <string name="menu_fetch">Rodyti ribojimus</string>
+    <string name="menu_fetch">Apriboti leidimus</string>
     <string name="menu_theme">Keisti temą</string>
     <string name="menu_pro">Pro versija aktyvi</string>
     <string name="menu_about">Apie XPrivacy</string>
     <string name="menu_help">Pagalba</string>
     <string name="menu_all">Visi leidimai</string>
     <string name="menu_apply">Taikyti šabloną</string>
-    <string name="menu_clear">Išvalyti visus leidimus</string>
+    <string name="menu_clear">Išvalyti leidimus</string>
     <string name="menu_app_launch">Paleisti programą</string>
     <string name="menu_app_settings">Programos informacija</string>
     <string name="menu_app_store">Play Store parduotuvė</string>
     <string name="menu_accounts">Leisti pažymėtas paskyras</string>
     <string name="menu_contacts">Leisti pažymėtus kontaktus</string>
+    
     <string name="msg_new">Naujas</string>
     <string name="msg_update">Atnaujinta</string>
     <string name="msg_licensed" formatted="false">licencija: %s</string>
     <string name="msg_loading">Palaukite...</string>
     <string name="msg_edit">Spustelėkite programos piktogramą norėdami redaguoti apribojimus</string>
-    <string name="msg_sure">Sutinkate?</string>
+    <string name="msg_sure">Įsitikinę?</string>
     <string name="msg_done">Atlikta</string>
     <string name="msg_reboot">Privaloma perkrauti prietaisą!</string>
     <string name="msg_random">Atsitiktiniai duomenys</string>
@@ -40,6 +42,7 @@
     <string name="msg_first"><b>Puiku, kad sutikote išbandyti XPrivacy.
 Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietaisu.
 \n\nTodėl naudokite visiškai savo pačių rizika.</b>\n\nTaip pat žiūrėkite licenciją:</string>
+
     <string name="restrict_accounts">Paskyra (Google, Facebook, kita)</string>
     <string name="restrict_browser">Naršyklė (žymės/istorija)</string>
     <string name="restrict_calendar">Kalendorius</string>
@@ -61,11 +64,12 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_shell">Vykdymas (komandos, superuser)</string>
     <string name="restrict_system">Sistema (įdiegtos programos)</string>
     <string name="restrict_view">Peržiūra (Naršyklė)</string>
+    
     <string name="title_category">Kategorija:</string>
     <string name="title_restrict">Žiūrėti leidimus:</string>
     <string name="title_nofilter">Nėra aktyvių filtrų</string>
-
     <plurals name="title_filters">
+    
         <item quantity="one">1 aktyvus filtras</item>
         <item quantity="other">%d aktyvūs filtrai</item>
     </plurals>
@@ -76,6 +80,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_frestricted">Apriboti leidimai</string>
     <string name="title_fuser">Vartotojo programos</string>
     <string name="title_fsystem">Sistemos programos</string>
+    
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
@@ -91,6 +96,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_notify">Atnaujinimų Pranesimas</string>
     <string name="settings_usage">Android naudojimo duomenys (reikia paleisti iš naujo)</string>
     <string name="settings_log">DEBUG žurnalas (reikia paleisti iš naujo)</string>
+    
     <string name="help_application">Programa</string>
     <string name="help_internet">Interneto leidimai</string>
     <string name="help_granted">Android leidimai</string>
