--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -11,17 +11,17 @@
     <string name="menu_settings">设置模拟信息（用于被限制应用）</string>
     <string name="menu_template">调整默认权限模板</string>
     <string name="menu_report">报告问题</string>
-    <string name="menu_export">导出程序配置</string>
-    <string name="menu_import">导入程序配置</string>
+    <string name="menu_export">导出程序配置到本地</string>
+    <string name="menu_import">导入本地的程序配置</string>
     <string name="menu_submit">上传权限限制规则</string>
     <string name="menu_fetch">下载权限限制规则</string>
     <string name="menu_theme">切换明/暗主题</string>
     <string name="menu_pro">捐赠/升级到专业版</string>
     <string name="menu_about">关于</string>
     <string name="menu_help">帮助</string>
-    <string name="menu_all">选择全部</string>
+    <string name="menu_all">选择全部选框</string>
     <string name="menu_apply">应用规则</string>
-    <string name="menu_clear">清除全部</string>
+    <string name="menu_clear">清除全部选框</string>
     <string name="menu_app_launch">启动应用程序</string>
     <string name="menu_app_settings">详细设置程序权限</string>
     <string name="menu_app_store">Play 商店</string>
