--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -76,6 +76,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_frestricted">Filter on restricted</string>
     <string name="title_fuser">Filter on user applications</string>
     <string name="title_fsystem">Filter on system applications</string>
+    <string name="title_fnot">Negate</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
