--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -76,6 +76,7 @@
     <string name="title_frestricted">التصفية حسب التقييد</string>
     <string name="title_fuser">تصفية برامج المستخدم</string>
     <string name="title_fsystem">تصفية برامج النظام</string>
+    <string name="title_fnot">Negate</string>
     <string name="settings_serial">السيريال#</string>
     <string name="settings_lat">خط العرض</string>
     <string name="settings_lon">خط الطول</string>
