--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -74,6 +74,7 @@
     <string name="title_frestricted">Filtra per restringit</string>
     <string name="title_fuser">Filtra per aplicacions d\'usuari</string>
     <string name="title_fsystem">Filtra per aplicacions de sistema</string>
+    <string name="title_fnot">Negate</string>
     <string name="settings_serial">Número de sèrie</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
