--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -77,6 +77,7 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="title_frestricted">Filter on restricted</string>
     <string name="title_fsystem">Filter on system applications</string>
     <string name="title_fuser">Filter on user applications</string>
+    <string name="title_fnot">Negate</string>
     <string name="settings_serial">Sériové číslo</string>
     <string name="settings_lat">Zeměpisná šířka</string>
     <string name="settings_lon">Zeměpisná délka</string>
