--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -74,6 +74,7 @@
     <string name="title_frestricted">Filter on restricted</string>
     <string name="title_fsystem">Filter on system applications</string>
     <string name="title_fuser">Filter on user applications</string>
+    <string name="title_fnot">Negate</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breddegrad</string>
     <string name="settings_lon">Længdegrad</string>
