--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -76,6 +76,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="title_frestricted">Filtrer restreintes</string>
     <string name="title_fuser">Filtrer les applis utilisateur</string>
     <string name="title_fsystem">Filtrer les applis système</string>
+    <string name="title_fnot">Negate</string>
     <string name="settings_serial">N° de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
