--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -76,6 +76,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_frestricted">Filter op beperkingen</string>
     <string name="title_fuser">Filter op gebruikersapplicaties</string>
     <string name="title_fsystem">Filter op systeemapplicaties</string>
+    <string name="title_fnot">Ontken</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
