--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -28,6 +28,7 @@
     <string name="menu_app_settings">جزییات نرم افزار</string>
     <string name="menu_app_store">پلی استور</string>
     <string name="menu_accounts">حساب هایی را که اجازه می دهید انتخاب کنید</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">تماس هایی را که احازه می دهید انتخاب کنید</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
