--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Innstillinger</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Velg konto som skal tillates</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Velg kontakter som skal tillates</string>
     <string name="msg_new">Nytt</string>
     <string name="msg_update">Oppdater</string>
