--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">إعدادات التطبيق</string>
     <string name="menu_app_store">متجر قوقل</string>
     <string name="menu_accounts">إختر الحسابات التي تود تمكينها</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">إختر الأسماء التي تود تمكينها</string>
     <string name="msg_new">جديد</string>
     <string name="msg_update">تحديث</string>
