--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Informace o aplikaci</string>
     <string name="menu_app_store">Obchod Play</string>
     <string name="menu_accounts">Povolené účty aplikace</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Povolené kontakty aplikace</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
