--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Λεπτομέρειες εφαρμογής</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Επιλογή επιτρεπόμενων λογαριασμών</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Επιλογή επιτρεπόμενων επαφών</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
