--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Beállítások</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Válassza ki az engedélyezendő fiókokat</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Válassza ki az engedélyezendő névjegyeket</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
