--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Impostazioni</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Seleziona account consentiti</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Seleziona contatti consentiti</string>
     <string name="msg_new">Nuovo</string>
     <string name="msg_update">Aggiorna</string>
