--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Настройки приложения</string>
     <string name="menu_app_store">Play Маркет</string>
     <string name="menu_accounts">Выберите разрешенные учетные записи</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Выберите разрешенные контакты</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
