--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Nastavenia</string>
     <string name="menu_app_store">Obchod Play</string>
     <string name="menu_accounts">Povolené účty</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Povolené kontakty</string>
     <string name="msg_new">Nové</string>
     <string name="msg_update">Aktualizácia</string>
