--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Подешавања</string>
     <string name="menu_app_store">Продавница Плеј</string>
     <string name="menu_accounts">Изабери дозвољене рачуне</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Изабери дозвољене контакте</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
