--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">Ayarlar</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">İzin verilecek hesapları seç</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">İzin verilecek kişileri seç</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
