--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_app_settings">應用程式資訊</string>
     <string name="menu_app_store">Play 商店</string>
     <string name="menu_accounts">設定允許之帳戶</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">設定允許之聯絡人</string>
     <string name="msg_new">已安裝</string>
     <string name="msg_update">已更新</string>
